# PaperEngine

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  premake5.lua
lib/freetype/builds/unix/: config.status  libtool  unix-cc.mk  unix-def.mk
lib/freetype/objs/.libs/: libfreetype.so.6.17.2
lib/glad/: premake5.lua
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
lib/libogg/: config.h  config.status  libtool  premake5.lua
lib/stb_image/: stb_image.cpp
src/: Paper.h  p_pch.cpp  p_pch.h
src/Paper/: Application.cpp  Application.h  Core.h  EntryPoint.h  Input.h  KeyCodes.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  MouseButtonCodes.h  OrthoCameraController.cpp  OrthoCameraController.h  Window.h
src/Paper/Audio/: CoreAudio.cpp  CoreAudio.h  alhelpers.h
src/Paper/Core/: Application.cpp  Application.h  Core.h  EntryPoint.h  Input.h  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Random.h  Timestep.h  Window.h
src/Paper/Debug/: ProfileIntstrument.h
src/Paper/Events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
src/Paper/ImGui/: ImGuiBuild.cpp  ImGuiLayer.cpp  ImGuiLayer.h
src/Paper/Renderer/: Buffer.cpp  Buffer.h  GraphicsContext.h  OrthoCameraController.cpp  OrthoCameraController.h  OrthographicCamera.cpp  OrthographicCamera.h  ParticleSystem.cpp  ParticleSystem.h  RenderCommand.cpp  RenderCommand.h  Renderer.cpp  Renderer.h  Renderer2D.cpp  Renderer2D.h  RendererAPI.cpp  RendererAPI.h  Shader.cpp  Shader.h  SubTexture2D.cpp  SubTexture2D.h  TextRenderer.cpp  TextRenderer.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h
src/Platform/Linux/: LinuxInput.cpp  LinuxInput.h  WindowLinux.cpp  WindowLinux.h
src/Platform/OpenGL/: ImGuiOpenGLRenderer.cpp  OpenGLBuffer.cpp  OpenGLBuffer.h  OpenGLContext.cpp  OpenGLContext.h  OpenGLRendererAPI.cpp  OpenGLRendererAPI.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLTexture.cpp  OpenGLTexture.h  OpenGLVertexArray.cpp  OpenGLVertexArray.h
src/Platform/Windows/: WindowWindows.cpp  WindowWindows.h  WindowsInput.cpp  WindowsInput.h
